Fix "See More >" links' vertical alignment

--- a/_scss/index.scss
+++ b/_scss/index.scss
@@ -128,7 +128,8 @@
 			
 			div {
 				bottom: 0;
-				padding-bottom: 25px;
+				padding-bottom: 30px;
+				position: absolute;
 				width: 100%;
 			}
 			
